[package]
name = "dircpy-stable"
version = "0.3.5"
authors = ["Johann Woelper <woelper@gmail.com>", "lamka02sk <lamka02sk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Copy directories recursively with flexible options. Runs on the stable channel."
repository = "https://github.com/lamka02sk/dircpy/"
keywords = ["copy", "recursive", "filesystem", "file"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
log = "0.4.14"


[dev-dependencies]
unzip = "0.1.0"
reqwest = { version = "0.11.1", features = ["blocking"] }
env_logger = "0.8.3"
